[gd_scene load_steps=3 format=2]

[ext_resource path="res://Icons/SystemIcon.png" type="Texture" id=1]
[ext_resource path="res://StarMap/MapSystem.gd" type="Script" id=2]

[node name="MapSystem" type="Button"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 36.3704
margin_right = 128.0
margin_bottom = 50.3704
text = "A system"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectIcon" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.87423
margin_top = 4.68987
margin_right = 3.87423
margin_bottom = 4.68987
rect_scale = Vector2( 0.755018, 0.755018 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
[connection signal="mouse_entered" from="." to="." method="_on_MapSystem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MapSystem_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_MapSystem_pressed"]
